feat: 完善项目结构和功能页面
- 添加三个功能页面：describer.html, cutout.html, unicode.html
- 实现顶部水平导航布局
- 添加后端API接口和Coze集成
- 完善项目文档和部署配置
- 优化响应式设计和用户体验

--- a/cutout.html
+++ b/cutout.html
@@ -43,6 +43,10 @@
             <section class="tool-header">
                 <h2 class="tool-title">AI-Powered Cutout Tool</h2>
                 <p class="tool-description">Advanced AI cutout technology for professional background removal and precise image cutout with automatic edge detection</p>
+                <div class="token-bar">
+                    <input id="tokenInput" class="token-input" type="password" placeholder="Enter Service Access Token" aria-label="Service Access Token">
+                    <button id="saveTokenBtn" class="btn btn-secondary">Use Token</button>
+                </div>
             </section>
 
             <div class="cutout-workspace">
