--- a/describer.html
+++ b/describer.html
@@ -264,6 +264,45 @@
             file.value = '';
         }
 
+        function toResizedDataUrl(file, maxSide, cb) {
+            var fr = new FileReader();
+            fr.onload = function() {
+                var tmp = new Image();
+                tmp.onload = function() {
+                    var w = tmp.naturalWidth;
+                    var h = tmp.naturalHeight;
+                    var scale = Math.min(1, maxSide / Math.max(w, h));
+                    var cw = Math.max(1, Math.floor(w * scale));
+                    var ch = Math.max(1, Math.floor(h * scale));
+                    var c = document.createElement('canvas');
+                    c.width = cw; c.height = ch;
+                    var ctx = c.getContext('2d');
+                    ctx.drawImage(tmp, 0, 0, cw, ch);
+                    var mime = file.type && file.type.indexOf('image/') === 0 ? file.type : 'image/jpeg';
+                    var dataUrl = c.toDataURL(mime, 0.9);
+                    cb(dataUrl);
+                };
+                tmp.src = fr.result;
+            };
+            fr.readAsDataURL(file);
+        }
+
+        async function describeViaAPI(dataUrl) {
+            try {
+                var res = await fetch('/api/describe', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ imageBase64: dataUrl, detail: 'low' })
+                });
+                if (!res.ok) return null;
+                var json = await res.json();
+                if (json && json.description) return json.description;
+                return null;
+            } catch (_) {
+                return null;
+            }
+        }
+
         file.addEventListener('change', function(e){
             var f = e.target.files && e.target.files[0];
             if (!f) return;
@@ -273,8 +312,16 @@
                 img.onload = function(){
                     placeholder.style.display = 'none';
                     img.style.display = 'block';
-                    var d = analyze(img);
-                    desc.textContent = d;
+                    desc.textContent = 'Generating description…';
+                    toResizedDataUrl(f, 1024, async function(dataUrl) {
+                        var serverDesc = await describeViaAPI(dataUrl);
+                        if (serverDesc) {
+                            desc.textContent = serverDesc;
+                        } else {
+                            var local = analyze(img);
+                            desc.textContent = local;
+                        }
+                    });
                 };
             };
             reader.readAsDataURL(f);
