--- a/cutout.html
+++ b/cutout.html
@@ -52,75 +52,75 @@
             <div class="cutout-workspace">
                 <div class="upload-section">
                     <div class="upload-area" id="uploadArea">
-                        <div class="upload-content">
-                            <div class="upload-icon">
-                                <svg width="64" height="64" viewBox="0 0 24 24" fill="none">
-                                    <path d="M12 2L12 14M12 2L8 6M12 2L16 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                                    <path d="M4 16L4 18C4 19.1046 4.89543 20 6 20L18 20C19.1046 20 20 19.1046 20 18L20 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                                </svg>
-                            </div>
-                            <h3 class="upload-title">Upload Image for AI Cutout</h3>
-                            <p class="upload-text">Drag and drop your image here for AI-powered cutout and background removal</p>
-                            <p class="upload-formats">Supports JPG, PNG, WebP formats</p>
-                            <input type="file" id="imageInput" accept="image/*" hidden>
-                            <button class="upload-btn" onclick="document.getElementById('imageInput').click()">
-                                Choose File
-                            </button>
+                    <div class="upload-content">
+                        <div class="upload-icon">
+                            <svg width="64" height="64" viewBox="0 0 24 24" fill="none">
+                                <path d="M12 2L12 14M12 2L8 6M12 2L16 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                                <path d="M4 16L4 18C4 19.1046 4.89543 20 6 20L18 20C19.1046 20 20 19.1046 20 18L20 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                            </svg>
+                        </div>
+                        <h3 class="upload-title">Upload Image for AI Cutout</h3>
+                        <p class="upload-text">Drag and drop your image here for AI-powered cutout and background removal</p>
+                        <p class="upload-formats">Supports JPG, PNG, WebP formats</p>
+                        <input type="file" id="imageInput" accept="image/*" hidden>
+                        <button class="upload-btn" onclick="document.getElementById('imageInput').click()">
+                            Choose File
+                        </button>
+                        <div class="selected-file">
+                            <span class="selected-file-label">File Information:</span>
+                            <span id="selectedFilePath" class="selected-file-path"></span>
+                            <span class="path-hint">(Binary file data will be displayed here)</span>
+                        </div>
+                        <div class="manual-path">
+                            <input id="manualPathInput" class="path-input" type="text" placeholder="Enter local file path (optional)">
+                            <button id="applyManualPathBtn" class="btn btn-secondary">Use This Path</button>
+                        </div>
+                        <div class="button-container">
+                            <button id="doUploadBtn" class="btn btn-primary">Upload to Coze</button>
+                            <button id="doCutoutBtn" class="btn btn-primary hidden">Start AI Cutout</button>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="results-section" id="resultsSection" style="display: none;">
+                <div class="results-section" id="uploadResultSection" style="display: none;">
                     <div class="results-header">
-                        <h3 class="results-title">Processing Results</h3>
+                        <h3 class="results-title">AI Cutout Results</h3>
                         <div class="results-actions">
                             <button class="btn btn-secondary" id="resetBtn">
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none">
                                     <path d="M3 12a9 9 0 1 0 9-9 9 9 0 0 0-9 9z" stroke="currentColor" stroke-width="1.5"/>
                                     <path d="M3 12h6m-3-3 3 3-3 3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
                                 </svg>
-                                New Image
-                            </button>
-                            <button class="btn btn-primary" id="downloadBtn">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none">
-                                    <path d="M12 2v14m0 0l4-4m-4 4l-4-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                                    <path d="M4 18v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                                </svg>
-                                Download
+                                New Upload
                             </button>
                         </div>
                     </div>
 
-                    <div class="results-grid">
-                        <div class="result-card">
-                            <div class="result-header">
-                                <h4 class="result-label">Original Image</h4>
-                            </div>
-                            <div class="result-image-container">
-                                <img id="originalImage" class="result-image" alt="Original image before AI cutout processing">
+                    <div class="result-card">
+                        <div class="result-header">
+                            <h4 class="result-label">File ID</h4>
+                            <button class="btn btn-primary" id="copyFileIdBtn">Copy</button>
+                        </div>
+                        <div class="result-image-container">
+                            <div id="resultFileId" style="font-weight:600;color:var(--gray-900)"></div>
+                        </div>
+                    </div>
+
+                    <div class="cutout-results-grid" id="cutoutResults" style="display: none;">
+                        <div class="result-image-card">
+                            <h4 class="result-label">Original Image</h4>
+                            <div class="image-preview-container">
+                                <img id="originalImagePreview" class="result-image" alt="Original Image">
                             </div>
                         </div>
-
-                        <div class="result-card">
-                            <div class="result-header">
-                                <h4 class="result-label">AI Cutout Result - Background Removed</h4>
-                                <div class="processing-indicator" id="processingIndicator">
-                                    <div class="spinner"></div>
-                                    <span>Processing...</span>
-                                </div>
-                            </div>
-                            <div class="result-image-container">
-                                <img id="cutoutImage" class="result-image" alt="AI cutout result with background removed" style="display: none;">
-                                <div class="placeholder-result" id="placeholderResult">
-                                    <div class="placeholder-icon">
-                                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
-                                            <path d="M4 4h10a3 3 0 0 1 3 3v10" stroke="currentColor" stroke-width="1.5"/>
-                                            <circle cx="7" cy="17" r="2" stroke="currentColor" stroke-width="1.5"/>
-                                            <circle cx="17" cy="7" r="2" stroke="currentColor" stroke-width="1.5"/>
-                                            <path d="M7 17l10-10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                                        </svg>
-                                    </div>
-                                    <p>AI is processing your image...</p>
+                        <div class="result-image-card">
+                            <h4 class="result-label">AI Cutout Result</h4>
+                            <div class="image-preview-container">
+                                <img id="cutoutImagePreview" class="result-image" alt="AI Cutout Result">
+                                <div id="cutoutLoading" class="loading-overlay" style="display: none;">
+                                    <div class="loading-spinner"></div>
+                                    <p>Processing AI cutout...</p>
                                 </div>
                             </div>
                         </div>
