feat: 优化cutout页面功能和样式
- 完善cutout页面CSS样式和交互效果
- 优化JavaScript逻辑和用户体验
- 修复页面布局问题
- 提升响应式设计表现

--- a/cutout.html
+++ b/cutout.html
@@ -105,6 +105,9 @@
                         <div class="result-image-container">
                             <div id="resultFileId" style="font-weight:600;color:var(--gray-900)"></div>
                         </div>
+                        <div style="padding: 1rem 1.5rem; border-top: 1px solid var(--gray-200); text-align: center;">
+                            <button id="cutoutBtnInResults" class="btn btn-primary" style="min-width: 160px;">Start AI Cutout</button>
+                        </div>
                     </div>
 
                     <div class="cutout-results-grid" id="cutoutResults" style="display: none;">
