--- a/unicode.html
+++ b/unicode.html
@@ -46,7 +46,8 @@
             </section>
 
             <div class="tool-container">
-                <div class="upload-section">
+                <div class="tool-columns">
+                    <div class="upload-section">
                     <div class="upload-area" id="uploadArea">
                         <div class="upload-icon">
                             <svg width="64" height="64" viewBox="0 0 24 24" fill="none">
@@ -83,6 +84,7 @@
                         </select>
                     </div>
                     <button id="convertBtn" class="convert-btn" disabled>Convert to Unicode</button>
+                </div>
                 </div>
 
                 <div class="result-section" id="resultSection" style="display: none;">
