--- a/cutout.html
+++ b/cutout.html
@@ -43,13 +43,66 @@
             <section class="tool-header">
                 <h2 class="tool-title">AI-Powered Cutout Tool</h2>
                 <p class="tool-description">Advanced AI cutout technology for professional background removal and precise image cutout with automatic edge detection</p>
-                <div class="token-bar">
-                    <input id="tokenInput" class="token-input" type="password" placeholder="Enter Service Access Token" aria-label="Service Access Token">
-                    <button id="saveTokenBtn" class="btn btn-secondary">Use Token</button>
-                </div>
+
             </section>
 
             <div class="cutout-workspace">
+                <!-- Results Section - Now appears first (above) -->
+                <div class="results-section" id="resultsSection" style="display: none;">
+                    <div class="results-header">
+                        <h3 class="results-title">AI Cutout Results</h3>
+                        <div class="results-actions">
+                            <button class="btn btn-secondary" id="resetBtn">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none">
+                                    <path d="M3 12a9 9 0 1 0 9-9 9 9 0 0 0-9 9z" stroke="currentColor" stroke-width="1.5"/>
+                                    <path d="M3 12h6m-3-3 3 3-3 3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                                </svg>
+                                Reupload
+                            </button>
+                            <button class="btn btn-primary" id="downloadBtn" style="display: none;">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none">
+                                    <path d="M12 2v12m0 0l4-4m-4 4l-4-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M4 16v2a2 2 0 002 2h12a2 2 0 002-2v-2" stroke="currentColor" stroke-width="1.5"/>
+                                </svg>
+                                Download
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="cutout-results-grid" id="cutoutResults">
+                        <div class="result-image-card">
+                            <h4 class="result-label">Original Image</h4>
+                            <div class="image-preview-container">
+                                <img id="originalImagePreview" class="result-image" alt="Original Image">
+                            </div>
+                        </div>
+                        <div class="result-image-card">
+                            <h4 class="result-label">AI Cutout Result</h4>
+                            <div class="image-preview-container">
+                                <img id="cutoutImagePreview" class="result-image" alt="AI Cutout Result" style="display: none;">
+                                <div id="cutoutLoading" class="loading-overlay" style="display: none;">
+                                    <div class="loading-spinner"></div>
+                                    <p>Processing AI cutout...</p>
+                                </div>
+                                <div class="loading-placeholder">
+                                    <div class="placeholder-icon">
+                                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
+                                            <rect x="3" y="4" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.5"/>
+                                            <path d="M8 13l3-3 5 5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <circle cx="8" cy="9" r="1.5" fill="currentColor"/>
+                                        </svg>
+                                    </div>
+                                    <p>Ready for AI cutout processing</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="remove-background-container">
+                        <button class="btn btn-primary" id="removeBackgroundBtn" style="display: none;">Remove Background</button>
+                    </div>
+                </div>
+
+                <!-- Upload Section - Now appears second (below) -->
                 <div class="upload-section">
                     <div class="upload-area" id="uploadArea">
                     <div class="upload-content">
@@ -66,67 +119,6 @@
                         <button class="upload-btn" onclick="document.getElementById('imageInput').click()">
                             Choose File
                         </button>
-                        <div class="selected-file">
-                            <span class="selected-file-label">File Information:</span>
-                            <span id="selectedFilePath" class="selected-file-path"></span>
-                            <span class="path-hint">(Binary file data will be displayed here)</span>
-                        </div>
-                        <div class="manual-path">
-                            <input id="manualPathInput" class="path-input" type="text" placeholder="Enter local file path (optional)">
-                            <button id="applyManualPathBtn" class="btn btn-secondary">Use This Path</button>
-                        </div>
-                        <div class="button-container">
-                            <button id="doUploadBtn" class="btn btn-primary">Upload to Coze</button>
-                            <button id="doCutoutBtn" class="btn btn-primary hidden">Start AI Cutout</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-                <div class="results-section" id="uploadResultSection" style="display: none;">
-                    <div class="results-header">
-                        <h3 class="results-title">AI Cutout Results</h3>
-                        <div class="results-actions">
-                            <button class="btn btn-secondary" id="resetBtn">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none">
-                                    <path d="M3 12a9 9 0 1 0 9-9 9 9 0 0 0-9 9z" stroke="currentColor" stroke-width="1.5"/>
-                                    <path d="M3 12h6m-3-3 3 3-3 3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                                </svg>
-                                New Upload
-                            </button>
-                        </div>
-                    </div>
-
-                    <div class="result-card">
-                        <div class="result-header">
-                            <h4 class="result-label">File ID</h4>
-                            <button class="btn btn-primary" id="copyFileIdBtn">Copy</button>
-                        </div>
-                        <div class="result-image-container">
-                            <div id="resultFileId" style="font-weight:600;color:var(--gray-900)"></div>
-                        </div>
-                        <div style="padding: 1rem 1.5rem; border-top: 1px solid var(--gray-200); text-align: center;">
-                            <button id="cutoutBtnInResults" class="btn btn-primary" style="min-width: 160px;">Start AI Cutout</button>
-                        </div>
-                    </div>
-
-                    <div class="cutout-results-grid" id="cutoutResults" style="display: none;">
-                        <div class="result-image-card">
-                            <h4 class="result-label">Original Image</h4>
-                            <div class="image-preview-container">
-                                <img id="originalImagePreview" class="result-image" alt="Original Image">
-                            </div>
-                        </div>
-                        <div class="result-image-card">
-                            <h4 class="result-label">AI Cutout Result</h4>
-                            <div class="image-preview-container">
-                                <img id="cutoutImagePreview" class="result-image" alt="AI Cutout Result">
-                                <div id="cutoutLoading" class="loading-overlay" style="display: none;">
-                                    <div class="loading-spinner"></div>
-                                    <p>Processing AI cutout...</p>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
