feat: 优化Unicode页面和整体UI体验
- 重构Unicode页面布局与交互逻辑
- 优化控件区域为纵向布局，提升空间利用率
- 改进按钮主题样式，增强视觉一致性
- 添加页面标题、关键词和浏览器图标支持
- 完善Unicode字符转换功能和用户体验

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="CusImage - Advanced AI image describer tool for automatic image captioning, intelligent image editing solutions with smart cutout and unicode conversion features">
-    <meta name="keywords" content="image describer, AI image captioning, automatic image description, smart image editing, AI cutout, image to unicode">
-    <title>CusImage - AI Image Describer & Smart Image Editing Tools</title>
+    <meta name="description" content="A suite of simple AI-driven image utilities: image describer, background cutout, and image to Unicode.">
+    <meta name="keywords" content="AI image tools, image describer, background removal, image cutout, image to Unicode, computer vision, web utilities">
+    <title>CusImage — AI Image Tools</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
+    <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
+    <script src="favicon.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
