--- a/test-navigation.html
+++ b/test-navigation.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navigation Test - CusImage</title>
+    <meta name="description" content="Internal page to verify navigation behavior.">
+    <meta name="keywords" content="navigation test, routing, internal testing">
+    <title>Navigation Test — CusImage</title>
+    <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
+    <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
+    <script src="favicon.js" defer></script>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         .test-section { margin: 20px 0; padding: 15px; border: 1px solid #ccc; }
