--- a/cutout.html
+++ b/cutout.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Cutout Tool - Professional Background Removal & Image Cutout | CusImage</title>
+    <meta name="description" content="Remove background from images automatically using AI segmentation.">
+    <meta name="keywords" content="background removal, image cutout, AI segmentation, remove background online">
+    <title>AI Cutout — Remove Background | CusImage</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
+    <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
     <link rel="stylesheet" href="cutout.css">
+    <script src="favicon.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
