--- a/describer.html
+++ b/describer.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Advanced AI Image Describer tool that automatically generates accurate, natural language descriptions for any image with multilingual captioning capabilities">
-    <meta name="keywords" content="image describer, AI image captioning, automatic image description, AI image analyzer, image to text, smart image description">
-    <title>AI Image Describer - Automatic Image Captioning & Description Tool | CusImage</title>
+    <meta name="description" content="Generate concise English descriptions for images using AI.">
+    <meta name="keywords" content="image describer, AI captions, alt text generator, computer vision descriptions">
+    <title>AI Image Describer — CusImage</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
+    <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
+    <script src="favicon.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
