--- a/layout-demo.html
+++ b/layout-demo.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CusImage - Layout Demo</title>
+    <meta name="description" content="Demonstration of responsive UI layout.">
+    <meta name="keywords" content="layout, responsive, CSS grid, flexbox">
+    <title>Layout Demo — CusImage</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
+    <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
+    <script src="favicon.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
