feat: 重构页面结构和优化项目配置
- 重命名功能页面为更友好的URL格式
- 更新项目规则和配置文件
- 优化index.html结构和导航
- 完善test-navigation.html功能测试
- 改进unicode.css样式和交互效果
- 重构unicode.js逻辑和用户体验

--- a/ai-cutout.html
+++ b/ai-cutout.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Remove background from images automatically using AI segmentation.">
-    <meta name="keywords" content="background removal, image cutout, AI segmentation, remove background online">
-    <title>AI Cutout — Remove Background | CusImage</title>
+    <meta name="description" content="Free AI Cutout tool for professional background removal. Automatically remove backgrounds from images with precise edge detection and high-quality cutout results.">
+    <meta name="keywords" content="AI cutout, background remover, remove background online, image cutout tool, AI background removal, automatic segmentation, photo cutout, free background remover">
+    <title>AI Cutout Tool - Remove Background Online with Automatic Image Segmentation | CusImage</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
     <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
@@ -27,16 +27,16 @@
                     </svg>
                 </div>
                 <h1 class="title">CusImage</h1>
-                <p class="subtitle">Professional AI Cutout & Image Editing Solutions</p>
+                <p class="subtitle">Advanced AI Cutout & Background Removal Solutions</p>
             </div>
             <div class="nav-dropdown">
                 <button class="nav-toggle" aria-haspopup="true" aria-expanded="false" aria-controls="main-nav">Menu</button>
                 <nav class="nav" id="main-nav" aria-label="Main navigation">
                     <ul class="nav-menu">
                         <li><a href="/" class="nav-link">Home</a></li>
-                        <li><a href="/describer.html" class="nav-link">Image Describer</a></li>
-                        <li><a href="/cutout.html" class="nav-link active">AI Cutout</a></li>
-                        <li><a href="/unicode.html" class="nav-link">Image to Unicode</a></li>
+                        <li><a href="/image-describer" class="nav-link">Image Describer</a></li>
+                        <li><a href="/ai-cutout" class="nav-link active">AI Cutout</a></li>
+                        <li><a href="/turn-images-into-unicode" class="nav-link">Turn Images into Unicode</a></li>
                     </ul>
                 </nav>
             </div>
@@ -46,8 +46,8 @@
     <main class="main">
         <div class="container">
             <section class="tool-header">
-                <h2 class="tool-title">AI-Powered Cutout Tool</h2>
-                <p class="tool-description">Advanced AI cutout technology for professional background removal and precise image cutout with automatic edge detection</p>
+                <h2 class="tool-title">AI-Powered Cutout Tool & Background Remover</h2>
+                <p class="tool-description">Advanced AI cutout technology for professional background removal, precise image segmentation, and automatic edge detection with high-quality results</p>
 
             </section>
 
