--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A suite of simple AI-driven image utilities: image describer, background cutout, and image to Unicode.">
-    <meta name="keywords" content="AI image tools, image describer, background removal, image cutout, image to Unicode, computer vision, web utilities">
-    <title>CusImage — AI Image Tools</title>
+    <meta name="description" content="Free AI-powered image tools: Advanced Image Describer for automatic alt text, AI Cutout for background removal, and Turn Images into Unicode converter. No registration required.">
+    <meta name="keywords" content="AI image describer, image description generator, AI cutout tool, background remover, remove background online, image to unicode converter, turn image into unicode, ASCII art generator, free image tools, online image utilities">
+    <title>CusImage - AI Image Describer, Cutout & Unicode Converter | Free Online Tools</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
     <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
@@ -25,16 +25,16 @@
                         <circle cx="8" cy="9" r="1.5" fill="currentColor"/>
                     </svg>
                 </div>
-                <h1 class="title">CusImage</h1>
-                <p class="subtitle">Advanced AI Image Describer & Intelligent Editing Solutions</p>
+                <h1 class="title">CusImage - AI Image Tools</h1>
+                <p class="subtitle">Advanced Image Describer, AI Cutout & Unicode Converter Solutions</p>
             </div>
             <div class="nav-dropdown">
                 <button class="nav-toggle" aria-haspopup="true" aria-expanded="false" aria-controls="main-nav">Menu</button>
                 <nav class="nav" id="main-nav" aria-label="Main navigation">
                     <ul class="nav-menu">
-                        <li><a href="/describer.html" class="nav-link">Image Describer</a></li>
-                        <li><a href="/cutout.html" class="nav-link">AI Cutout</a></li>
-                        <li><a href="/unicode.html" class="nav-link">Image to Unicode</a></li>
+                        <li><a href="/image-describer" class="nav-link">Image Describer</a></li>
+                        <li><a href="/ai-cutout" class="nav-link">AI Cutout</a></li>
+                        <li><a href="/turn-images-into-unicode" class="nav-link">Turn Images into Unicode</a></li>
                     </ul>
                 </nav>
             </div>
@@ -44,12 +44,12 @@
     <main class="main">
         <div class="container">
             <section class="hero">
-                <h2 class="hero-title">AI-Powered Image Describer & Editing Tools</h2>
-                <p class="hero-description">Transform your images with our advanced AI image describer, smart cutout, and unicode conversion tools for efficient image editing</p>
+                <h2 class="hero-title">AI-Powered Image Describer, Cutout & Unicode Tools</h2>
+                <p class="hero-description">Transform your images with our advanced AI image describer for automatic descriptions, smart cutout for background removal, and unicode converter for text art creation</p>
             </section>
 
             <div class="features-grid">
-                <a href="describer.html" class="feature-card">
+                <a href="/image-describer" class="feature-card">
                     <div class="card-icon">
                         <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
                             <rect x="3" y="3" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.5"/>
@@ -62,7 +62,7 @@
                     <span class="card-cta">Get Started →</span>
                 </a>
 
-                <a href="cutout.html" class="feature-card">
+                <a href="/ai-cutout" class="feature-card">
                     <div class="card-icon">
                         <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
                             <path d="M4 4h10a3 3 0 0 1 3 3v10" stroke="currentColor" stroke-width="1.5"/>
@@ -76,7 +76,7 @@
                     <span class="card-cta">Get Started →</span>
                 </a>
 
-                <a href="unicode.html" class="feature-card">
+                <a href="/turn-images-into-unicode" class="feature-card">
                     <div class="card-icon">
                         <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
                             <rect x="3" y="3" width="8" height="8" rx="1.5" stroke="currentColor" stroke-width="1.5"/>
@@ -85,7 +85,7 @@
                             <rect x="13" y="13" width="8" height="8" rx="1.5" stroke="currentColor" stroke-width="1.5"/>
                         </svg>
                     </div>
-                    <h3 class="card-title">Image to Unicode</h3>
+                    <h3 class="card-title">Turn Images into Unicode</h3>
                     <p class="card-description">Convert images into Unicode art compatible with terminals and web</p>
                     <span class="card-cta">Get Started →</span>
                 </a>
