--- a/test-navigation.html
+++ b/test-navigation.html
@@ -26,9 +26,9 @@
         <p>These links should work from any page location:</p>
         
         <a href="/" class="test-link">Home (Root)</a>
-        <a href="/describer.html" class="test-link">Image Describer</a>
-        <a href="/cutout.html" class="test-link">AI Cutout</a>
-        <a href="/unicode.html" class="test-link">Image to Unicode</a>
+        <a href="/image-describer" class="test-link">Image Describer</a>
+        <a href="/ai-cutout" class="test-link">AI Cutout</a>
+        <a href="/turn-images-into-unicode" class="test-link">Turn Images into Unicode</a>
         
         <p><strong>Expected behavior:</strong> These links should navigate correctly regardless of which page you're currently on.</p>
     </div>
