--- a/turn-images-into-unicode.html
+++ b/turn-images-into-unicode.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Convert images into Unicode/ASCII art in the browser.">
-    <meta name="keywords" content="image to Unicode, ASCII art, text art, pixel art, web converter">
-    <title>Image to Unicode — ASCII Art Generator | CusImage</title>
+    <meta name="description" content="Turn images into unicode with our free online converter. Transform any picture into beautiful ASCII art and unicode text characters for terminal displays, social media, and creative projects.">
+    <meta name="keywords" content="turn images into unicode, image to unicode converter, ASCII art generator, text art converter, image to text, unicode art, ASCII art creator, free image to unicode">
+    <title>Turn Images into Unicode - Free Online Converter & ASCII Art Generator | CusImage</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
     <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
@@ -27,16 +27,16 @@
                     </svg>
                 </div>
                 <h1 class="title">CusImage</h1>
-                <p class="subtitle">Advanced Image to Unicode Conversion Solutions</p>
+                <p class="subtitle">Professional Turn Images into Unicode & ASCII Art Conversion Solutions</p>
             </div>
             <div class="nav-dropdown">
                 <button class="nav-toggle" aria-haspopup="true" aria-expanded="false" aria-controls="main-nav">Menu</button>
                 <nav class="nav" id="main-nav" aria-label="Main navigation">
                     <ul class="nav-menu">
                         <li><a href="/" class="nav-link">Home</a></li>
-                        <li><a href="/describer.html" class="nav-link">Image Describer</a></li>
-                        <li><a href="/cutout.html" class="nav-link">AI Cutout</a></li>
-                        <li><a href="/unicode.html" class="nav-link active">Image to Unicode</a></li>
+                        <li><a href="/image-describer" class="nav-link">Image Describer</a></li>
+                        <li><a href="/ai-cutout" class="nav-link">AI Cutout</a></li>
+                        <li><a href="/turn-images-into-unicode" class="nav-link active">Turn Images into Unicode</a></li>
                     </ul>
                 </nav>
             </div>
@@ -46,8 +46,8 @@
     <main class="main">
         <div class="container">
             <section class="tool-header">
-                <h2 class="tool-title">Image to Unicode Art Converter</h2>
-                <p class="tool-description">Transform any image into beautiful Unicode character art perfect for terminal displays, social media, and creative text-based image representation</p>
+                <h2 class="tool-title">Turn Images into Unicode - Advanced Converter & ASCII Art Generator</h2>
+                <p class="tool-description">Easily turn images into unicode art with our advanced converter. Transform any picture into beautiful Unicode characters and ASCII text perfect for terminal displays, social media, and creative projects</p>
             </section>
 
             <div class="tool-container">
